Fix challenge card height on mobile

--- a/_sass/_live.scss
+++ b/_sass/_live.scss
@@ -216,7 +216,9 @@ input.live__topbar__input:checked + label {
     }
 
     > p {
-        height: 3em;
+        @include media-desktop {
+           height: 3em;
+        }
     }
 
     > .live__challengechannel {
